<!--

    SSHTOOLS Limited licenses this file to you under the Apache
    License, Version 2.0 (the "License"); you may not use this
    file except in compliance with the License.

    You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

-->
<!-- SSHTOOLS Limited licenses this file to you under the Apache License, 
	Version 2.0 (the "License"); you may not use this file except in compliance 
	with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<properties>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
	</properties>

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.sshtools</groupId>
	<artifactId>ui</artifactId>

	<name>SSHTOOLS UI</name>
	<description>Utility classes used in a number of SSHTOOLS AWT/Swing UI projects.</description>
	<url>https://github.com/sshtools/ui</url>
	<version>3.1.2</version>

	<licenses>
		<license>
			<name>Apache License Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/sshtools/ui</url>
		<connection>scm://github.com/sshtools/ui.git</connection>
	</scm>
	<developers>
		<developer>
			<id>lee</id>
			<name>Lee David Painter</name>
			<email>lee@sshtools.com</email>
		</developer>
		<developer>
			<id>brett</id>
			<name>Brett Smith</name>
			<email>brett@hypersocket.com</email>
		</developer>
	</developers>


	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<outputDirectory>target/classes</outputDirectory>
		<testOutputDirectory>target/test-classes</testOutputDirectory>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<targetPath>.</targetPath>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
							<includeDependencySources>false</includeDependencySources>
							<dependencySourceIncludes>
								<!-- include ONLY dependencies I control -->
								<dependencySourceInclude>com.sshtools:*</dependencySourceInclude>
							</dependencySourceIncludes>
							<doclint>none</doclint>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.5</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>2.3</version>
					<configuration>
						<header>templates/Apache-2.txt</header>
						<properties>
							<owner>SSHTOOLS Limited</owner>
							<email>support@sshtools.com</email>
						</properties>
						<excludes>
							<exclude>**/README</exclude>
							<exclude>src/test/resources/**</exclude>
							<exclude>src/main/resources/**</exclude>
						</excludes>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
								<goal>format</goal>
								<goal>remove</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.3</version>
					<extensions>true</extensions>
					<configuration>
						<serverId>ossrh-sshtools</serverId>
						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


	<profiles>

		<profile>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<configuration>
								<!-- TODO: Why is this STILL broken! -->
								<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
								<excludePackageNames>**.impl.*</excludePackageNames>
								<!-- https://bugs.openjdk.java.net/browse/JDK-8212233 -->
								<detectJavaApiLink>false</detectJavaApiLink>
								<source>8</source>
								<doclint>none</doclint>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
					</plugin>

					<plugin>
						<groupId>com.mycila</groupId>
						<artifactId>license-maven-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh-sshtools</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>opensource-releases</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>


	<dependencies>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.8</version>
		</dependency>

		<dependency>
		    <groupId>com.miglayout</groupId>
		    <artifactId>miglayout-swing</artifactId>
		    <version>5.2</version>
		</dependency>
	</dependencies>
</project>